--- a/Museum Tionghoa Sukabumi/index.html
+++ b/Museum Tionghoa Sukabumi/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/components/article.css">
     <link rel="stylesheet" href="css/components/sidebar.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="./BlogVerse Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./BlogVerse Logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
