--- a/Museum Tionghoa Sukabumi/index.html
+++ b/Museum Tionghoa Sukabumi/index.html
@@ -83,7 +83,7 @@
                             <img src="./Penulis/Sammy.jpg" alt="Penulis" class="avatar">
                         </div>
                         <h3 class="widget-title">Tentang Penulis</h3>
-                        <p class="author-bio">Seorang anak sekolah yang menuliskan pengalaman outing luar kota ke Museum Tionghoa Sukabumi.</p>
+                        <p class="author-bio">Siswa yang menuliskan pengalaman outing luar kota ke Museum Tionghoa Sukabumi.</p>
                         <!-- <div class="author-social">
                             <a href="#" class="social-link">Twitter</a>
                             <a href="#" class="social-link">GitHub</a>
